<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/Title"
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_weight="1"
                android:background="@color/application_title_background"
                android:fontFamily="@font/exo"
                android:text="Comparison Settings"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="Yearly Salary" />

            <com.google.android.material.slider.Slider
                android:id="@+id/yearlySalaryWeightID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:stepSize="1"
                android:value="1"
                android:valueFrom="0"
                android:valueTo="9"
                android:contentDescription="Enter your yearly salary weight."
                app:labelBehavior="floating" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="Yearly Bonus" />

            <com.google.android.material.slider.Slider
                android:id="@+id/yearlyBonusWeightID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:stepSize="1"
                android:value="1"
                android:valueFrom="0"
                android:valueTo="9"
                android:contentDescription="Enter your yearly bonus weight."
                app:labelBehavior="floating" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="Tuition Reimbursement" />

            <com.google.android.material.slider.Slider
                android:id="@+id/tuitionReimbursementWeightID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:stepSize="1"
                android:value="1"
                android:valueFrom="0"
                android:valueTo="9"
                android:contentDescription="Enter your tuition reimbursement weight."
                app:labelBehavior="floating" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="Health Insurance" />

            <com.google.android.material.slider.Slider
                android:id="@+id/healthInsuranceWeightID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:stepSize="1"
                android:value="1"
                android:valueFrom="0"
                android:valueTo="9"
                android:contentDescription="Enter your health insurance weight."
                app:labelBehavior="floating" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="EmployeeDiscount" />

            <com.google.android.material.slider.Slider
                android:id="@+id/employeeDiscountWeightID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:stepSize="1"
                android:value="1"
                android:valueFrom="0"
                android:valueTo="9"
                android:contentDescription="Enter your employee discount weight."
                app:labelBehavior="floating" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="Child Adoption Assistance" />

            <com.google.android.material.slider.Slider
                android:id="@+id/childAdoptionWeightID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:stepSize="1"
                android:value="1"
                android:valueFrom="0"
                android:valueTo="9"
                android:contentDescription="Enter your child adoption assistance weight."
                app:labelBehavior="floating" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButtonComparisonID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/button_background"
                android:fontFamily="@font/exo"
                android:text="Cancel"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButtonComparisonID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/button_background"
                android:fontFamily="@font/exo"
                android:text="Save"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>