...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/comparisonSettingsButtonID"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button_background"
                android:fontFamily="@font/exo"
                android:text="Comparison Settings"
...
